# json-schema-to-c

./: CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.sh
src/: CMakeLists.txt  demo.c  demo.h  func.h  main.rs  schema.json
test/: CMakeLists.txt  testcase.cpp
